--- a/about/index.html
+++ b/about/index.html
@@ -226,7 +226,7 @@
       <div class="container">
         <h1>Menjembatani Sains Lahan & Teknologi</h1>
         <p>
-          Lontara adalah studio intelijen lingkungan yang berdedikasi untuk
+          Lontara adalah studio pemodelan lingkungan & DAS yang berdedikasi untuk
           mentransformasi cara organisasi dan pemerintah mengambil keputusan
           tata ruang—dari metode observasi konvensional menuju pemodelan
           prediktif berbasis data.
@@ -243,7 +243,7 @@
           <h2>Visi Kami</h2>
           <p>
             Menjadi pelopor infrastruktur data spasial dan kecerdasan buatan
-            (*Artificial Intelligence*) dalam sektor lingkungan hidup di Asia
+            <i>(*Artificial Intelligence*)</i> dalam sektor lingkungan hidup di Asia
             Tenggara, memastikan setiap jengkal keputusan penggunaan lahan
             didasarkan pada perhitungan ekologis yang presisi.
           </p>
@@ -392,6 +392,7 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
 
