--- a/about/index.html
+++ b/about/index.html
@@ -243,7 +243,7 @@
           <h2>Visi Kami</h2>
           <p>
             Menjadi pelopor infrastruktur data spasial dan kecerdasan buatan
-            <i>(*Artificial Intelligence*)</i> dalam sektor lingkungan hidup di Asia
+            <i>Artificial Intelligence</i> dalam sektor lingkungan hidup di Asia
             Tenggara, memastikan setiap jengkal keputusan penggunaan lahan
             didasarkan pada perhitungan ekologis yang presisi.
           </p>
@@ -251,7 +251,7 @@
         <div class="vm-card reveal-init">
           <h2>Misi Kami</h2>
           <p>
-            Menyediakan alat rekayasa data, dasbor *WebGIS*, dan mesin pemodelan
+            Menyediakan alat rekayasa data, dasbor <b>WebGIS</b>, dan mesin pemodelan
             spasial yang dapat diakses, transparan, dan dapat diandalkan untuk
             mengatasi kompleksitas evaluasi kesesuaian lahan, konservasi air,
             dan mitigasi perubahan iklim.
@@ -281,21 +281,21 @@
               Lontara didirikan dari pemahaman mendalam bahwa sains lingkungan
               tidak cukup hanya berakhir sebagai makalah akademis. Dibutuhkan
               rekayasa perangkat lunak untuk membawa wawasan tersebut menjadi
-              sistem pendukung keputusan yang nyata (*Decision Support
-              Systems*).
+              sistem pendukung keputusan yang nyata <i>Decision Support
+              Systems</i>.
             </p>
             <p style="color: var(--text-muted); margin-bottom: 15px">
               Dengan latar belakang pendidikan Ilmu Tanah dari Universitas
               Hasanuddin dan studi pascasarjana di Institut Pertanian Bogor
               (IPB), Fajar menggabungkan keahlian fisika tanah dan hidrologi
-              dengan rekayasa spasial (*Spatial Engineering*).
+              dengan rekayasa spasial <i>Spatial Engineering</i>.
             </p>
             <p style="color: var(--text-muted); margin-bottom: 30px">
               Pengalamannya membentang dari riset mendalam tata guna lahan dan
               kinerja Daerah Aliran Sungai di Sub-DAS Tanralili, hingga
               keterlibatannya dalam pengembangan platform rekomendasi aksi
               perubahan iklim (SIDIK) berskala nasional. Fokus utamanya kini
-              adalah mengintegrasikan GIS, *Python*, dan *Machine Learning*
+              adalah mengintegrasikan GIS, Python, dan <i>Machine Learning</i>
               untuk otomasi evaluasi kesesuaian lahan dan pemodelan lingkungan.
             </p>
             <div style="display: flex; gap: 15px">
@@ -323,7 +323,7 @@
           class="section-subtitle"
           style="text-align: center; margin: 0 auto 50px"
         >
-          Basis keilmuan dan tumpukan teknologi (*Tech Stack*) yang
+          Basis keilmuan dan tumpukan teknologi <i>Tech Stack</i> yang
           memberdayakan platform Lontara.
         </p>
 
@@ -352,7 +352,7 @@
             <h4>Environmental Physics</h4>
             <p>
               Hidrologi, Fisika Tanah, Konservasi Air, dan pemodelan limpasan
-              (*runoff*).
+              <i>runoff</i>.
             </p>
           </div>
         </div>
@@ -392,6 +392,7 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
 
