--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
       <div class="container">
         <h2 class="section-title">WEBGIS Interaktif</h2>
         <p class="section-subtitle">
-          Live Preview: Ekplorasi infrastruktur data spasial terintegrasi untuk
+          Live Preview: Data spasial terintegrasi untuk
           Sub DAS Tanralili. Gunakan fitur interaktif untuk melihat atribut
-          LULC, Tanah, dan Geologi.
+          LULC, dan Geologi.
         </p>
 
         <div class="webgis-container reveal-init">
@@ -341,6 +341,7 @@
     <script src="js/main.js"></script>
   </body>
 </html>
+
 
 
 
