--- a/contact/index.html
+++ b/contact/index.html
@@ -196,10 +196,15 @@
               arsitektur spasial, pemodelan DAS, atau pengembangan produk Anda.
             </p>
 
-            <div class="info-block">
-              <h4>Email Langsung</h4>
-              <p>lontaraai@gmail.com</p>
-            </div>
+<div class="info-block" style="margin-top: 40px">
+  <a
+    href="mailto:lontaraai@gmail.com"
+    style="color: #EA4335; font-weight: 700; display: flex; align-items: center; gap: 10px; text-decoration: none;"
+  >
+    <i class="bi bi-envelope-fill" style="font-size: 1.2rem;"></i>
+    Email: lontaraai@gmail.com &rarr;
+  </a>
+</div>
             <div class="info-block">
               <h4>Lokasi Studio</h4>
               <p>Kota Makassar, Sulawesi Selatan<br />Indonesia</p>
@@ -315,5 +320,6 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
+
 
 
