--- a/contact/index.html
+++ b/contact/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hubungi Lontara | Contact Us</title>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"
+    ></script>
+
     <link rel="icon" type="image/png" href="../assets/images/icon.png" />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -153,7 +159,9 @@
               <a href="../platform/environmental-dashboard.html"
                 >WEBGIS Interaktif</a
               >
-              <a href="../platform/spatial-ml-engine.html">Machine Learning untuk Spasial</a>
+              <a href="../platform/spatial-ml-engine.html"
+                >Machine Learning untuk Spasial</a
+              >
               <a href="../platform/data-engineering-tools.html"
                 >Tools untuk Analisis Spasial</a
               >
@@ -196,55 +204,97 @@
               arsitektur spasial, pemodelan DAS, atau pengembangan produk Anda.
             </p>
 
-<div class="info-block" style="margin-top: 40px">
-  <h4 style="color: var(--primary); margin-bottom: 10px;">Email Langsung</h4>
-  <div style="display: flex; align-items: center; gap: 10px; color: var(--text-main);">
-    <i class="bi bi-envelope-fill" style="color: #EA4335; font-size: 1.2rem;"></i>
-    <p style="margin: 0; font-weight: 500;">lontaraai@gmail.com</p>
-  </div>
-</div>
-<div class="info-block" style="margin-top: 40px">
-  <h4 style="color: var(--primary); margin-bottom: 10px;">Lokasi Studio</h4>
-  <div style="display: flex; align-items: flex-start; gap: 10px; color: var(--text-main);">
-    <i class="bi bi-geo-alt-fill" style="color: #FF4444; font-size: 1.2rem;"></i>
-    <p style="margin: 0; line-height: 1.5;">
-      Kota Makassar, Sulawesi Selatan<br />
-      Indonesia
-    </p>
-  </div>
-</div>
             <div class="info-block" style="margin-top: 40px">
-  <a
-    href="https://linkedin.com/in/fajar-nugraha23"
-    target="_blank"
-    style="color: #0077B5; font-weight: 700; display: flex; align-items: center; gap: 10px;"
-  >
-    <i class="bi bi-linkedin" style="font-size: 1.2rem;"></i>
-    Terhubung di LinkedIn &rarr;
-  </a>
-</div>
+              <h4 style="color: var(--primary); margin-bottom: 10px">
+                Email Langsung
+              </h4>
+              <div
+                style="
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                  color: var(--text-main);
+                "
+              >
+                <i
+                  class="bi bi-envelope-fill"
+                  style="color: #ea4335; font-size: 1.2rem"
+                ></i>
+                <p style="margin: 0; font-weight: 500">lontaraai@gmail.com</p>
+              </div>
+            </div>
+            <div class="info-block" style="margin-top: 40px">
+              <h4 style="color: var(--primary); margin-bottom: 10px">
+                Lokasi Studio
+              </h4>
+              <div
+                style="
+                  display: flex;
+                  align-items: flex-start;
+                  gap: 10px;
+                  color: var(--text-main);
+                "
+              >
+                <i
+                  class="bi bi-geo-alt-fill"
+                  style="color: #ff4444; font-size: 1.2rem"
+                ></i>
+                <p style="margin: 0; line-height: 1.5">
+                  Kota Makassar, Sulawesi Selatan<br />
+                  Indonesia
+                </p>
+              </div>
+            </div>
+            <div class="info-block" style="margin-top: 40px">
+              <a
+                href="https://linkedin.com/in/fajar-nugraha23"
+                target="_blank"
+                style="
+                  color: #0077b5;
+                  font-weight: 700;
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                "
+              >
+                <i class="bi bi-linkedin" style="font-size: 1.2rem"></i>
+                Terhubung di LinkedIn &rarr;
+              </a>
+            </div>
 
-<div class="info-block" style="margin-top: 40px">
-  <a
-    href="https://www.instagram.com/lontara.ai/"
-    target="_blank"
-    style="color: #E4405F; font-weight: 700; display: flex; align-items: center; gap: 10px;"
-  >
-    <i class="bi bi-instagram" style="font-size: 1.2rem;"></i>
-    Ikuti Kami di Instagram &rarr;
-  </a>
-</div>
+            <div class="info-block" style="margin-top: 40px">
+              <a
+                href="https://www.instagram.com/lontara.ai/"
+                target="_blank"
+                style="
+                  color: #e4405f;
+                  font-weight: 700;
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                "
+              >
+                <i class="bi bi-instagram" style="font-size: 1.2rem"></i>
+                Ikuti Kami di Instagram &rarr;
+              </a>
+            </div>
 
-<div class="info-block" style="margin-top: 40px">
-  <a
-    href="https://wa.me/62881022823654"
-    target="_blank"
-    style="color: #25D366; font-weight: 700; display: flex; align-items: center; gap: 10px;"
-  >
-    <i class="bi bi-whatsapp" style="font-size: 1.2rem;"></i>
-    Hubungi Kami di WhatsApp &rarr;
-  </a>
-</div>
+            <div class="info-block" style="margin-top: 40px">
+              <a
+                href="https://wa.me/62881022823654"
+                target="_blank"
+                style="
+                  color: #25d366;
+                  font-weight: 700;
+                  display: flex;
+                  align-items: center;
+                  gap: 10px;
+                "
+              >
+                <i class="bi bi-whatsapp" style="font-size: 1.2rem"></i>
+                Hubungi Kami di WhatsApp &rarr;
+              </a>
+            </div>
           </div>
 
           <div class="contact-form-card reveal-init">
@@ -324,8 +374,3 @@
     <script src="../js/main.js"></script>
   </body>
 </html>
-
-
-
-
-
