--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
         font-size: 1.8rem;
       }
 
-      /* SOLUSI GAMBAR: Mengatur agar gambar utuh dan berada di atas pada mobile */
+      /* Founder Section Layout */
       .founder-section {
         display: grid;
         grid-template-columns: 1fr 1.2fr;
@@ -78,12 +78,11 @@
         border-radius: var(--radius);
         overflow: hidden;
         box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
-        background: var(--border);
       }
 
       .founder-image-container img {
         width: 100%;
-        height: auto; /* Memastikan gambar ijazah tampil utuh */
+        height: auto; 
         display: block;
         object-fit: contain; 
       }
@@ -101,7 +100,7 @@
         margin-bottom: 15px;
       }
 
-      /* Tech & Expertise Grid */
+      /* Tech Stack Grid */
       .expertise-grid {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -116,33 +115,22 @@
         border-radius: var(--radius);
       }
 
-      /* RESPONSIVE: Gambar di atas teks pada layar kecil */
       @media (max-width: 992px) {
-        .vision-mission {
-          grid-template-columns: 1fr;
-        }
+        .vision-mission,
         .founder-section {
           grid-template-columns: 1fr;
           gap: 40px;
-          text-align: center;
         }
         .founder-image-container {
-          order: 1; /* Gambar tetap di atas */
+          order: 1;
           max-width: 320px;
         }
         .founder-text {
-          order: 2; /* Teks di bawah gambar */
+          order: 2;
+          text-align: center;
         }
         .expertise-grid {
           grid-template-columns: repeat(2, 1fr);
-        }
-        .hero-about h1 {
-          font-size: 2.2rem;
-        }
-      }
-      @media (max-width: 600px) {
-        .expertise-grid {
-          grid-template-columns: 1fr;
         }
       }
     </style>
@@ -189,8 +177,8 @@
 
     <section class="hero-about">
       <div class="container">
-        <h1>Menjembatani Sains Lahan & Teknologi</h1>
-        <p>
+        <h1 class="reveal-init">Menjembatani Sains Lahan & Teknologi</h1>
+        <p class="reveal-init">
           Lontara adalah studio pemodelan lingkungan & DAS yang berdedikasi untuk
           mentransformasi pengambilan keputusan tata ruang berbasis data prediktif.
         </p>
@@ -222,28 +210,25 @@
       <div class="container">
         <div class="founder-section">
           <div class="founder-image-container reveal-init">
-            <img 
-              src="../assets/images/Foto%20Pribadi.jpeg" 
-              alt="Fajar Nugraha - Founder Lontara" 
-            />
+            <img src="../assets/images/Foto%20Pribadi.jpeg" alt="Fajar Nugraha" />
           </div>
 
-          <div class="founder-text reveal-init">
-            <span class="founder-badge">Founder & Lead Engineer</span>
-            <h2 style="font-size: 2.2rem; margin-bottom: 20px">Fajar Nugraha</h2>
-            <p style="color: var(--text-muted); margin-bottom: 15px">
+          <div class="founder-text">
+            <span class="founder-badge reveal-init">Founder & Lead Engineer</span>
+            <h2 class="reveal-init" style="font-size: 2.2rem; margin-bottom: 20px">Fajar Nugraha</h2>
+            <p class="reveal-init" style="color: var(--text-muted); margin-bottom: 15px">
               Lontara didirikan dari pemahaman mendalam bahwa sains lingkungan membutuhkan 
               rekayasa perangkat lunak untuk menjadi <i>Decision Support Systems</i> yang nyata.
             </p>
-            <p style="color: var(--text-muted); margin-bottom: 15px">
-              Dengan latar belakang Ilmu Tanah dari Universitas Hasanuddin dan studi pascasarjana di Institut Pertanian Bogor (IPB), 
+            <p class="reveal-init" style="color: var(--text-muted); margin-bottom: 15px">
+              Dengan latar belakang Ilmu Tanah dari Universitas Hasanuddin dan studi pascasarjana di IPB, 
               Fajar menggabungkan keahlian hidrologi dengan <i>Spatial Engineering</i>.
             </p>
-            <p style="color: var(--text-muted); margin-bottom: 30px">
+            <p class="reveal-init" style="color: var(--text-muted); margin-bottom: 30px">
               Fokus utamanya kini mengintegrasikan GIS, Python, dan <i>Machine Learning</i> untuk otomasi 
               evaluasi kesesuaian lahan dan pemodelan lingkungan.
             </p>
-            <div style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: center;">
+            <div class="reveal-init" style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: flex-start;">
               <a href="../contact/index.html" class="btn-primary">Hubungi Saya</a>
               <a href="https://linkedin.com/in/fajar-nugraha23" target="_blank" class="btn-secondary">LinkedIn Profile</a>
             </div>
@@ -254,7 +239,7 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="section-title" style="text-align: center">DNA Teknologi Kami</h2>
+        <h2 class="section-title reveal-init" style="text-align: center">DNA Teknologi Kami</h2>
         <div class="expertise-grid">
           <div class="expertise-item reveal-init">
             <h4>Geospatial Sciences</h4>
