--- a/index.html
+++ b/index.html
@@ -65,8 +65,13 @@
         </div>
 
         <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close">&times;</button>
-          
+          <button class="nav-close" id="nav-close" aria-label="Close Menu">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+              <line x1="18" y1="6" x2="6" y2="18"></line>
+              <line x1="6" y1="6" x2="18" y2="18"></line>
+            </svg>
+          </button>
+
           <div class="nav-item">
             <a href="solutions/index.html">Jasa</a>
           </div>
@@ -101,15 +106,14 @@
     </header>
 
     <section class="hero">
-      <div class="container hero-content">
+      <div class="container hero-content" style="text-align: center;">
         <h1 class="reveal-init">Sistem Cerdas untuk Manajemen Lingkungan & Lahan</h1>
-        <p class="reveal-init">
-          Lontara merancang infrastruktur data spasial terstruktur, sistem
-          pemodelan lingkungan, dan platform geospasial interaktif untuk
-          keputusan manajemen lahan yang terinformasi.
+        <p class="reveal-init" style="margin: 0 auto 30px auto;">
+          Lontara merancang infrastruktur data spasial terstruktur, sistem pemodelan lingkungan, 
+          dan platform geospasial interaktif untuk keputusan manajemen lahan yang terinformasi.
         </p>
 
-        <div class="hero-buttons reveal-init">
+        <div class="hero-buttons reveal-init" style="display: flex; gap: 15px; justify-content: center;">
           <a href="solutions/index.html" class="btn-primary">Jelajahi Solusi</a>
           <a href="platform/index.html" class="btn-secondary">Lihat Proyek</a>
         </div>
@@ -118,10 +122,10 @@
 
     <section class="webgis-section">
       <div class="container">
-        <h2 class="section-title">WEBGIS Interaktif</h2>
-        <p class="section-subtitle">
+        <h2 class="section-title" style="text-align: center;">WEBGIS Interaktif</h2>
+        <p class="section-subtitle" style="text-align: center; margin: 0 auto 40px auto;">
           Live Preview: Data spasial terintegrasi untuk Sub DAS Tanralili. 
-          Gunakan fitur interaktif untuk melihat atribut LULC dan Geologi.
+          Gunakan fitur interaktif untuk melihat atribut LULC, dan Geologi.
         </p>
 
         <div class="webgis-container reveal-init">
@@ -150,15 +154,15 @@
           </div>
           <div class="card reveal-init" style="text-align: center;">
             <h3>Otomatisasi Geodatabase</h3>
-            <p>Menyederhanakan alur kerja data keruangan melalui skrip otomatisasi untuk pengelolaan geodatabase yang terstruktur.</p>
+            <p>Menyederhanakan alur kerja data keruangan melalui skrip otomatisasi untuk pengelolaan yang lebih cepat dan terstruktur.</p>
           </div>
           <div class="card reveal-init" style="text-align: center;">
             <h3>Visualisasi Spasial (WebGIS)</h3>
-            <p>Mentransformasi data geospasial menjadi platform peta interaktif dan dasbor analitik yang intuitif.</p>
+            <p>Mentransformasi data geospasial yang kompleks menjadi platform peta interaktif dan dasbor analitik intuitif.</p>
           </div>
           <div class="card reveal-init" style="text-align: center;">
             <h3>Prediksi Spasial & AI</h3>
-            <p>Menerapkan algoritma Machine Learning untuk klasifikasi tutupan lahan dan pemodelan prediksi tata ruang.</p>
+            <p>Menerapkan algoritma Machine Learning tingkat lanjut untuk klasifikasi tutupan lahan otomatis dan simulasi lingkungan.</p>
           </div>
         </div>
       </div>
@@ -166,24 +170,27 @@
 
     <section class="section section-light">
       <div class="container">
-        <h2 class="section-title" style="text-align: center;">Layanan Presisi</h2>
+        <h2 class="section-title" style="text-align: center;">Jasa</h2>
+        <p class="section-subtitle" style="text-align: center; margin: 0 auto 50px auto;">
+          Sistem spasial presisi yang dirancang khusus untuk menjawab tantangan tata kelola lingkungan dan lahan.
+        </p>
         <div class="grid-3 align-start">
           <div class="card reveal-init" style="text-align: center;">
             <a href="solutions/watershed-modeling.html" class="card-link">
-              <h3>Pemodelan Hidrologi</h3>
-              <p>Pemodelan limpasan permukaan, mitigasi risiko banjir, dan evaluasi daya dukung DAS.</p>
+              <h3>Pemodelan Hidrologi & DAS</h3>
+              <p>Pemodelan limpasan permukaan, mitigasi risiko banjir, dan evaluasi komprehensif daya dukung DAS.</p>
             </a>
           </div>
           <div class="card reveal-init" style="text-align: center;">
             <a href="solutions/land-suitability.html" class="card-link">
-              <h3>Kesesuaian Lahan</h3>
-              <p>Analisis spasial multikriteria diintegrasikan dengan teknologi prediktif untuk optimalisasi lahan.</p>
+              <h3>Evaluasi Kesesuaian Lahan</h3>
+              <p>Analisis spasial multikriteria terintegrasi dengan pemodelan prediktif untuk optimalisasi tata guna lahan.</p>
             </a>
           </div>
           <div class="card reveal-init" style="text-align: center;">
             <a href="solutions/environmental-monitoring.html" class="card-link">
-              <h3>Monitoring Berkala</h3>
-              <p>Dasbor spasial cerdas untuk pengawasan kondisi lingkungan secara aktual dan berkelanjutan.</p>
+              <h3>Pemantauan Lingkungan</h3>
+              <p>Dasbor spasial cerdas untuk pengawasan kondisi lingkungan secara aktual, komprehensif, dan berkelanjutan.</p>
             </a>
           </div>
         </div>
